# eyegaze_characterization_tasks

./: README.md  argallab_gaze_characterization.unitypackage
src/eyegaze_virtual_tasks/: CMakeLists.txt  README.md  package.xml
src/eyegaze_virtual_tasks/eyegaze_virtual_tasks/: streamprocessing.py  transform2d.py
src/eyegaze_virtual_tasks/launch/: record.launch.py  study_unity.launch.py
src/eyegaze_virtual_tasks/nodes/: keyinput_task_support.py  unity_correction_controller.py  unity_focus_controller.py  unity_gaze_controller.py  unity_paint_controller.py  unity_trace_controller.py
src/eyegaze_virtual_tasks/study_parameters/: focus_targets_random_0.csv  focus_targets_random_1.csv  focus_targets_random_2.csv  trace_paths.json  trace_paths_train.json
src/ros2_pyg3_common/: CMakeLists.txt  README.md  package.xml
src/ros2_pyg3_common/msg/: Alpha.msg  CalibrationMarkerStamped.msg  FocusTarget.msg  GazeScreenStamped.msg  GazeStamped.msg  ImuStamped.msg  ScreenCornersStamped.msg  TraceTarget.msg  UtilityStamped.msg
src/ros2_pyg3_common/srv/: RecordJoyTrace.srv  UnityTarget.srv  UnityTrace.srv  WebsocketRequest.srv
src/ros2_pyg3_wrapper/: CMakeLists.txt  README.md  package.xml
src/ros2_pyg3_wrapper/launch/: glasses.launch.py  wrapper.launch.py
src/ros2_pyg3_wrapper/nodes/: g3_subscriber.py  g3_wrapper.py
src/ros2_pyg3_wrapper/ros2_pyg3_wrapper/: receiver.py  sender.py  utilities.py  wrapper_sendrecv_sync.py
src/ros2_pyg3_wrapper/src/: scene_camera_reader.cpp
